# Polynomial-Expansion

./: .gitignore  .gitmodules  CMakeLists.txt  Polynomial_Training_and_Evaluation.ipynb  README.md  build_tokenizer.py  build_tokenizer.sh  citations.txt  cleanup_cutlass.sh  common_utils.py  create_model_params.sh  dataset.py  expansions.txt  inference.py  inference.sh  main.py  model.py  model_summary.py  network.txt  requirements.txt  retrain.py  retrain.sh  retrain_gpu_colab.sh  split_data.py  train.py  train.sh  train_gpu.sh  train_gpu_colab.sh  train_gpu_kaggle.sh  train_mps.sh  utils.py
checkpoints/1/: _CHECKPOINT_METADATA
inference_server_cutlass/: WeightMetadata.h  load_weights.cu
jax_implementation/: batched_inference.py  check_param_dtypes.py  create_model_parameters.py  ddp_train.py  inference.py  jax_model.py  model.py  quantize_model_weights.py  render_inference.py  train.py  utils.py
pytorch_implementation/: Polynomial_Training_and_Evaluation.ipynb  inference.py  main.py  model.py  model_summary.py  network.txt  train.py
pytorch_new_implementation/: batched_inference.py  model.py  train.py
src/: build_tokenizer.py  build_tokenizer.sh  quantize_model.sh  train.sh  train_gpu_colab.sh  train_gpu_kaggle.sh  train_mps.sh
src/inference_server_cutlass/: Model.cpp  layers.cu  layers.h  load_weights.cpp  utils.cu  utils.h
src/jax_implementation/: batched_inference.py  ddp_train.py  model.py  quantize_model_weights.py  train.py  utils.py  (+1 more)
tests/inference_server_cutlass/: CMakeLists.txt  test_WeightsMetadata.cu  test_utils.h
tests/inference_server_cutlass/test_layers/: test_Embedding.cu  test_Encoder.cu  test_LSTM.cu  test_LSTMCell.cu  test_Linear.cu
tests/inference_server_cutlass/test_utils/: test_WeightsMetadata.cu  test_utils.h
tokenizers/: tokenizer.pickle
(+24 files in other folders)
